--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "engines": {
     "node": "^16.x || ^14.x",
-    "npm": "^6.14.18"
+    "npm": "^6.x"
   },
   "dependencies": {
     "@babel/core": "^7.18.10",
